--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,25 @@
 baseURL = "https://example.com/"
 
 [module]
-[module.hugoVersion]
-min = "0.109.0"
+  [module.hugoVersion]
+    extended = true
+    min = "0.109.0"
+    max = ""
+  [module.imports]
+    path = ["github.com/twbs/bootstrap"]
+  [[module.mounts]]
+    source = "assets"
+    target = "assets"
+  [[module.mounts]]
+    source = "static"
+    target = "static"
+  [[module.mounts]]
+    source = "layouts"
+    target = "layouts"
+  [[module.mounts]]
+    source = "assets/bootstrap/scss/_vendor"
+    target = "assets/vendor/bootstrap/scss/vendor"
+  [[module.mounts]]
+    source = "scss"
+    target = "assets/vendor/bootstrap/scss"
+
