--- a/dependencies/config.toml
+++ b/dependencies/config.toml
@@ -22,9 +22,10 @@ _merge = "deep"
   target = "static"
 # Dependencies are brought in as modules
 # and mount points are declared
-[[module.imports]]
-  path = "github.com/twbs/bootstrap"
-  disable = false
+# [[module.imports]]
+# path = "github.com/twbs/bootstrap"
+# path = "github.com/juggernautjp/hugo-widebs5-theme"
+# disable = false
 [[module.imports.mounts]]
   source = "scss"
   target = "assets/vendor/bootstrap/scss"
