--- a/config.toml
+++ b/config.toml
@@ -12,15 +12,27 @@ baseURL = "https://example.com/"
     source = "assets"
     target = "assets"
   [[module.mounts]]
+    source = "node_modules/bootstrap"
+    target = "assets/vendor/bootstrap"
+  [[module.mounts]]
+    source = "node_modules/@fortawesome/fontawesome-free"
+    target = "assets/vendor/Font-Awesome"
+  [[module.mounts]]
     source = "static"
     target = "static"
   [[module.mounts]]
     source = "layouts"
     target = "layouts"
+    # Mounts for projects using Docsy as an NPM package. The source path prefix
+    # "../.." moves out of themes/docsy so that Docsy can find its dependencies.
   [[module.mounts]]
-    source = "assets/bootstrap/scss/_vendor"
-    target = "assets/vendor/bootstrap/scss/vendor"
+    source = "../../node_modules/bootstrap"
+    target = "assets/vendor/bootstrap"
   [[module.mounts]]
-    source = "scss"
-    target = "assets/vendor/bootstrap/scss"
+    source = "../../node_modules/@fortawesome/fontawesome-free"
+    target = "assets/vendor/Font-Awesome"
+  [[module.mounts]]
+    source = "../../node_modules/@fortawesome/fontawesome-free/webfonts"
+    target = "static/webfonts"
+
 
