--- a/dependencies/config.toml
+++ b/dependencies/config.toml
@@ -22,21 +22,21 @@ _merge = "deep"
   target = "static"
 # Dependencies are brought in as modules
 # and mount points are declared
-# [[module.imports]]
-#   path = "github.com/twbs/bootstrap"
-#   disable = false
-# [[module.imports.mounts]]
-#   source = "scss"
-#   target = "assets/vendor/bootstrap/scss"
-# [[module.imports.mounts]]
-#   source = "dist/js"
-#   target = "assets/vendor/bootstrap/dist/js"
-# [[module.imports]]
-#   path = "github.com/FortAwesome/Font-Awesome"
-#   disable = false
-# [[module.imports.mounts]]
-#   source = "scss"
-#   target = "assets/vendor/Font-Awesome/scss"
-# [[module.imports.mounts]]
-#   source = "webfonts"
-#   target = "static/webfonts"
+[[module.imports]]
+  path = "github.com/twbs/bootstrap"
+  disable = false
+[[module.imports.mounts]]
+  source = "scss"
+  target = "assets/vendor/bootstrap/scss"
+[[module.imports.mounts]]
+  source = "dist/js"
+  target = "assets/vendor/bootstrap/dist/js"
+[[module.imports]]
+  path = "github.com/FortAwesome/Font-Awesome"
+  disable = false
+[[module.imports.mounts]]
+  source = "scss"
+  target = "assets/vendor/Font-Awesome/scss"
+[[module.imports.mounts]]
+  source = "webfonts"
+  target = "static/webfonts"
