--- a/dependencies/config.toml
+++ b/dependencies/config.toml
@@ -29,8 +29,8 @@ _merge = "deep"
   source = "scss"
   target = "assets/vendor/bootstrap/scss"
 [[module.imports.mounts]]
-  source = "dist/js"
-  target = "assets/vendor/bootstrap/dist/js"
+  source = "js"
+  target = "assets/vendor/bootstrap/js"
 [[module.imports]]
   path = "github.com/FortAwesome/Font-Awesome"
   disable = false
