--- a/config.toml
+++ b/config.toml
@@ -5,9 +5,9 @@ baseURL = "https://example.com/"
     extended = true
     min = "0.109.0"
     max = ""
-#  [[module.imports]]
-#    path = "github.com/twbs/bootstrap"
-#    disable = false
+  [[module.imports]]
+    path = "github.com/twbs/bootstrap"
+    disable = false
   [[module.mounts]]
     source = "assets"
     target = "assets"
