--- a/dependencies/config.toml
+++ b/dependencies/config.toml
@@ -22,15 +22,15 @@ _merge = "deep"
   target = "static"
 # Dependencies are brought in as modules
 # and mount points are declared
-# [[module.imports]]
-#  path = "github.com/twbs/bootstrap"
-#  disable = false
-# [[module.imports.mounts]]
-#   source = "scss"
-#   target = "assets/vendor/bootstrap/scss"
-# [[module.imports.mounts]]
-#   source = "js"
-#   target = "assets/vendor/bootstrap/js"
+[[module.imports]]
+  path = "github.com/twbs/bootstrap"
+  disable = false
+[[module.imports.mounts]]
+  source = "scss"
+  target = "assets/vendor/bootstrap/scss"
+[[module.imports.mounts]]
+  source = "js"
+  target = "assets/vendor/bootstrap/js"
 [[module.imports]]
   path = "github.com/FortAwesome/Font-Awesome"
   disable = false
