--- a/dependencies/config.toml
+++ b/dependencies/config.toml
@@ -1,18 +1,16 @@
 [module]
 _merge = "deep"
-# work around https://github.com/golang/go/issues/37397
-# [[module.mounts]]
-#   source = "assets/bootstrap/scss/_vendor"
-#   target = "assets/vendor/bootstrap/scss/vendor"
+[module.hugoVersion]
+  extended = true
+# workaround for https://github.com/golang/go/issues/37397
+# Workaround for https://github.com/gohugoio/hugo/issues/6945
+[[module.mounts]]
+  source = "assets/bootstrap/scss/_vendor"
+  target = "assets/bootstrap/scss/vendor"
 # mount asserts directory
 [[module.mounts]]
   source = "assets"
   target = "assets"
-# mount i18n directory
-# [[module.mounts]]
-#   source = "i18n"
-#   target = "i18n"
-# mount layouts directory
 [[module.mounts]]
   source = "layouts"
   target = "layouts"
@@ -27,16 +25,7 @@ _merge = "deep"
   disable = false
 [[module.imports.mounts]]
   source = "scss"
-  target = "assets/vendor/bootstrap/scss"
+  target = "assets/bootstrap/scss"
 [[module.imports.mounts]]
   source = "js"
-  target = "assets/vendor/bootstrap/js"
-[[module.imports]]
-  path = "github.com/FortAwesome/Font-Awesome"
-  disable = false
-[[module.imports.mounts]]
-  source = "scss"
-  target = "assets/vendor/Font-Awesome/scss"
-[[module.imports.mounts]]
-  source = "webfonts"
-  target = "static/webfonts"
+  target = "assets/bootstrap/js"
