--- a/config.toml
+++ b/config.toml
@@ -5,34 +5,40 @@ baseURL = "https://example.com/"
     extended = true
     min = "0.109.0"
     max = ""
+#  [[module.imports]]
+#    path = "github.com/twbs/bootstrap"
+#    disable = false
+#  [[module.mounts]]
+#    source = "assets"
+#    target = "assets"
+#  [[module.mounts]]
+#    source = "node_modules/bootstrap"
+#    target = "assets/vendor/bootstrap"
   [[module.imports]]
-    path = "github.com/twbs/bootstrap"
+    path = "https://github.com/FortAwesome/Font-Awesome"
     disable = false
   [[module.mounts]]
-    source = "assets"
-    target = "assets"
-  [[module.mounts]]
-    source = "node_modules/bootstrap"
-    target = "assets/vendor/bootstrap"
-  [[module.mounts]]
-    source = "node_modules/@fortawesome/fontawesome-free"
-    target = "assets/vendor/Font-Awesome"
-  [[module.mounts]]
-    source = "static"
-    target = "static"
-  [[module.mounts]]
-    source = "layouts"
-    target = "layouts"
+    source = "js-packages/@fortawesome/fontawesome-free/"
+    target = "assets/Font-Awesome"
+  [[module.imports]]
+    path = "https://github.com/juggernautjp/hugo-widebs5-theme/dependencies"
+    disable = false
+#  [[module.mounts]]
+#    source = "static"
+#    target = "static"
+#  [[module.mounts]]
+#    source = "layouts"
+#    target = "layouts"
     # Mounts for projects using Docsy as an NPM package. The source path prefix
     # "../.." moves out of themes/docsy so that Docsy can find its dependencies.
-  [[module.mounts]]
-    source = "../../node_modules/bootstrap"
-    target = "assets/vendor/bootstrap"
-  [[module.mounts]]
-    source = "../../node_modules/@fortawesome/fontawesome-free"
-    target = "assets/vendor/Font-Awesome"
-  [[module.mounts]]
-    source = "../../node_modules/@fortawesome/fontawesome-free/webfonts"
-    target = "static/webfonts"
+#  [[module.mounts]]
+#    source = "../../node_modules/bootstrap"
+#    target = "assets/vendor/bootstrap"
+#  [[module.mounts]]
+#    source = "../../node_modules/@fortawesome/fontawesome-free"
+#    target = "assets/vendor/Font-Awesome"
+#  [[module.mounts]]
+#    source = "../../node_modules/@fortawesome/fontawesome-free/webfonts"
+#    target = "static/webfonts"
 
 
