--- a/config.toml
+++ b/config.toml
@@ -15,13 +15,13 @@ baseURL = "https://example.com/"
 #    source = "node_modules/bootstrap"
 #    target = "assets/vendor/bootstrap"
   [[module.imports]]
-    path = "https://github.com/FortAwesome/Font-Awesome"
+    path = "github.com/FortAwesome/Font-Awesome"
     disable = false
   [[module.mounts]]
     source = "js-packages/@fortawesome/fontawesome-free/"
     target = "assets/Font-Awesome"
   [[module.imports]]
-    path = "https://github.com/juggernautjp/hugo-widebs5-theme/dependencies"
+    path = "gitlab.com/writeonlyhugo/hugo-module-bootstrap"
     disable = false
 #  [[module.mounts]]
 #    source = "static"
