--- a/dependencies/config.toml
+++ b/dependencies/config.toml
@@ -32,3 +32,12 @@
 [[module.imports.mounts]]
   source = "js"
   target = "assets/vendor/bootstrap/js"
+[[module.imports]]
+  path = "github.com/FortAwesome/Font-Awesome"
+  disable = false
+[[module.imports.mounts]]
+  source = "scss"
+  target = "assets/vendor/Font-Awesome/scss"
+[[module.imports.mounts]]
+  source = "webfonts"
+  target = "static/webfonts"
