fix dependencies/config.toml and config.toml

--- a/dependencies/config.toml
+++ b/dependencies/config.toml
@@ -17,10 +17,13 @@
 [[module.mounts]]
   source = "layouts"
   target = "layouts"
-# mount static directory
 [[module.mounts]]
   source = "static"
   target = "static"
+# fontawesome-free
+[[module.mounts]]
+  source = "node_modules/@fortawesome/fontawesome-free/webfonts"
+  target = "static/webfonts"
 # Dependencies are brought in as modules
 # and mount points are declared
 [[module.imports]]
@@ -28,7 +31,7 @@
   disable = false
 [[module.imports.mounts]]
   source = "scss"
-  target = "assets/vendor/bootstrap/scss"
+ target = "assets/vendor/bootstrap/scss"
 [[module.imports.mounts]]
   source = "js"
   target = "assets/vendor/bootstrap/js"
