--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,55 +1,67 @@
 {
-  "extends": "../.eslintrc.json",
-  "env": {
-    "browser": true,
-    "node": false
-  },
-  "parserOptions": {
-    "sourceType": "script"
-  },
-  "plugins": [
-    "markdown"
+  "root": true,
+  "extends": [
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:unicorn/recommended",
+    "xo",
+    "xo/browser"
   ],
   "rules": {
-    "no-new": "off",
-    "strict": "error",
-    "unicorn/no-array-for-each": "off",
-    "unicorn/numeric-separators-style": "off",
-    "unicorn/prefer-node-protocol": "off"
-  },
-  "overrides": [
-    {
-      // 2. Enable the Markdown processor for all .md files.
-      "files": [
-        "./**/*.md"
-      ],
-      "processor": "markdown/markdown"
-    },
-    {
-      // In v2, configuration for fenced code blocks is separate from the
-      // containing Markdown file. Each code block has a virtual filename
-      // appended to the Markdown file's path.
-      "files": [
-        "./**/*.md/*.js"
-      ],
-      // Configuration for fenced code blocks goes with the override for
-      // the code block's virtual filename, for example:
-      "parserOptions": {
-        "ecmaFeatures": {
-          "impliedStrict": true
-        }
-      },
-      "rules": {
-        "no-array-for-each": "off",
-        "no-labels": "off",
-        "no-redeclare": "off",
-        "no-undef": "off",
-        "no-unused-expressions": "off",
-        "no-unused-labels": "off",
-        "no-unused-vars": "off",
-        "unicorn/no-array-for-each": "off",
-        "unicorn/numeric-separators-style": "off"
+    "arrow-body-style": "off",
+    "capitalized-comments": "off",
+    "comma-dangle": [
+      "error",
+      "never"
+    ],
+    "indent": [
+      "error",
+      2,
+      {
+        "MemberExpression": "off",
+        "SwitchCase": 1
       }
-    }
-  ]
+    ],
+    "max-params": [
+      "warn",
+      5
+    ],
+    "multiline-ternary": [
+      "error",
+      "always-multiline"
+    ],
+    "new-cap": [
+      "error",
+      {
+        "properties": false
+      }
+    ],
+    "no-console": "error",
+    "no-negated-condition": "off",
+    "object-curly-spacing": [
+      "error",
+      "always"
+    ],
+    "operator-linebreak": [
+      "error",
+      "after"
+    ],
+    "prefer-template": "error",
+    "semi": [
+      "error",
+      "never"
+    ],
+    "unicorn/explicit-length-check": "off",
+    "unicorn/no-array-callback-reference": "off",
+    "unicorn/no-array-method-this-argument": "off",
+    "unicorn/no-null": "off",
+    "unicorn/no-typeof-undefined": "off",
+    "unicorn/no-unused-properties": "error",
+    "unicorn/prefer-array-flat": "off",
+    "unicorn/prefer-dom-node-dataset": "off",
+    "unicorn/prefer-module": "off",
+    "unicorn/prefer-query-selector": "off",
+    "unicorn/prefer-spread": "off",
+    "unicorn/prevent-abbreviations": "off"
+  }
 }
