--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Hugo WideBs5 Theme sample site",
   "main": "index.js",
   "scripts": {
+    "lint": "npm-run-all css-lint-stylelint js-lint",
     "css-lint-stylelint": "stylelint \"**/*.{css,scss}\" --cache --cache-location .cache/.stylelintcache --rd",
-    "css-compile": "sass --style expanded --source-map --embed-sources --no-error-css assets/scss/:dist/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,9 +24,13 @@
   "homepage": "https://github.com/juggernautjp/hugo-widebs5-theme#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.13",
+    "clean-css-cli": "^5.6.2",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
     "sass": "^1.57.1",
     "sass-true": "^7.0.0",
-    "stylelint": "^14.16.1",
-    "stylelint-config-twbs-bootstrap": "^7.0.0"
+    "stylelint": "^15.2.0",
+    "stylelint-config-twbs-bootstrap": "^8.0.0"
   }
 }
