--- a/config.yaml
+++ b/config.yaml
@@ -6,3 +6,8 @@ module:
 
   imports:
     - path: "github.com/juggernautjp/hugo-widebs5-dependencies"
+      mounts:
+        - source: "assets/scss"
+          target: "assets/docs/scss"
+        - source: "assets/js"
+          target: "assets/docs/js"
