--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,10 @@ module:
     extended: true
     min: "0.109.0"
     max: ""
-
+  mounts:
+    - source: "assets/scss"
+      target: "assets/docs/scss"
+    - source: "assets/js"
+      target: "assets/docs/js"
   imports:
     - path: "github.com/juggernautjp/hugo-widebs5-dependencies"
