--- a/.stylelintrc
+++ b/.stylelintrc
@@ -30,7 +30,7 @@
   },
   "overrides": [
     {
-      "files": "scss/**/*.{test,spec}.scss",
+      "files": "assets/bootstrap/scss/**/*.{test,spec}.scss",
       "rules": {
         "scss/dollar-variable-default": null,
         "declaration-no-important": null
