--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 *.dll
 *.so
 *.dylib
-*.bak
 *.diff
 *.err
 *.log
@@ -25,6 +24,8 @@
 *.vi
 *.zip
 *~
+*.bak
+*.old
 
 # Test binary, built with `go test -c`
 *.test
